syntax = "proto3";

package edu.uci.ics.amber.engine.common;

enum WorkerState {
  Uninitialized = 0;
  Ready = 1;
  Running = 2;
  Paused = 3;
  Completed = 4;
  Recovering = 5;

}

message WorkerStatistics{
  WorkerState workerState = 1;
  int64 inputRowCount = 2;
  int64 outputRowCount = 3;

}
